# proteus

./: README.md  pyproject.toml  test_spec.json
examples/: base_objects.py
src/: common.py
src/proteus/: __init__.py  cli.py  common.py  fitting.py  units.py
src/proteus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/proteus/assemblies/: __init__.py
src/proteus/components/: __init__.py  bearing.py  cuff.py  fastener.py  flange.py  gear.py  pipe.py  sprocket.py  thread.py
src/proteus/data/: pipe.csv
tests/: test_bearing.py  test_fastener.py  test_gear.py  test_pipe_flange.py  test_sprocket.py  test_thread.py
