[project]
name = "proteus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bd-warehouse>=0.2.0",
  "build123d>=0.10.0",
  "pint>=0.25.3",
  "pydantic>=2.13.4",
]

[project.optional-dependencies]
melos = [
  "melos-core",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.uv.sources]
melos-core = { path = "../../melos/packages/melos-core", editable = true }
